Closed Bug 343264 Opened 19 years ago Closed 19 years ago

I'm prompted to save a password that password manager filled in

Categories

(Toolkit :: Password Manager, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8.1beta2

People

(Reporter: dbaron, Assigned: mwu)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

In trunk builds, I've been prompted to save passwords that password manager filled in. This is a recent regression in the past week or so, probably from Michael Wu's password manager changes. Steps to reproduce: 1. set up Firefox so it remembers your password (e.g., tell it to remember if it doesn't already) on http://bugzilla.mozilla.org/ 2. load http://bugzilla.mozilla.org 3. Click "<a>Log Out</a> user@domain.tld" in the footer if you're logged in 4. Click "<a>Log In</a>" in the footer 5. click the "Log In" button Expected results: 4. password filled in to form 5. form submits without prompt Actual results: 4. [same as expected] 5. Dialog pops up: Confirm: Do you want Firefox to remember this password?
(In reply to comment #1) > This is Bug 343182 I think. > This is another regression from the bug 257781, though the fix will probably be the same as for bug 343182. I think certain assumptions that the password manager makes about the form are incorrect when it is notified earlier.
Assignee: nobody → michael.wu
Nevermind, this appears to be a regression from bug 221634.
Blocks: 343022
Apparently, it's a bad idea to preinitialize the password manager during app-startup, but it's perfectly okay during profile-after-change. This fixes both this bug (by allowing the passwords to be properly loaded so the password manager doesn't get confused) and bug 343022.
Attachment #227771 - Flags: review?(enndeakin)
Blocks: 343182
Flags: blocking-firefox2?
Blocks: 221634
Blocks beta2, but we'll take a reviewed and baked patch for beta 1 if we can get it.
Flags: blocking-firefox2? → blocking-firefox2+
Target Milestone: --- → Firefox 2 beta2
The login page needs to be reloaded before the autocomplete list shows up (e.g. on Gmail and on Freemail). Does the patch also contain a fix for this?
(In reply to comment #6) > That is a regression from Bug 343022; the leak.
Status: NEW → ASSIGNED
Hm, I did not change it to assigned, sorry. Must have gone something wrong.
Status: ASSIGNED → NEW
Attachment #227771 - Flags: review?(enndeakin) → review?(mconnor)
Attachment #227771 - Flags: review?(mconnor) → review+
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
No longer blocks: 343182
Taking off the list, since the patch that caused this never landed on branch. If it does, but 221634 has the rollup with this fix.
Flags: blocking-firefox2+ → blocking-firefox2-
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: