Bug 343264 I'm prompted to save a password that password manager filled in. patch by mwu@mozilla.com, r=mconnor